--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,9 +1,3 @@
-.navbar {
-  background-color: powderblue;
-  padding-left: 8%;
-  padding-right: 7%;
-}
-
 .btn {
   border-radius: 25px;
 }
@@ -13,27 +7,37 @@
   color: mediumblue;
 }
 
-.btn-primary {
-  background-color: mediumblue;
-  border-color: mediumblue;
-  align-items: center;
-}
-
 .btn-outline-success:hover {
   color: white;
   background-color: mediumblue;
   border: mediumblue;
 }
 
+.btn-primary {
+  background-color: mediumblue;
+  border-color: mediumblue;
+  align-items: center;
+  font-family: "Alice", serif;
+}
+
 .carousel-inner {
-  max-width: 90%;
   height: 130vh;
   position: relative;
   margin: auto;
   margin-top: 105px;
 }
 
-.carousel-caption {
-  font-size: 1.75rem;
-  color: royalblue;
+.hero-text {
+  font-family: "Sacramento", cursive;
+}
+
+.navbar {
+  background-color: powderblue;
+  padding-left: 6%;
+  padding-right: 6%;
+  font-family: "Alice", serif;
+}
+
+.nav-item {
+  font-size: 1.5rem;
 }
