--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -42,3 +42,33 @@
   font-size: 1.25rem;
   font-family: "Alice", serif;
 }
+
+.prices {
+  color: grey;
+  font-size: 22px;
+}
+
+.product {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  margin-top: 105px;
+  text-align: center;
+  font-family: "Alice", serif;
+}
+
+.product button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: #000;
+  background-color: powderblue;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 1.5rem;
+}
+
+.product button:hover {
+  opacity: 0.7;
+}
