--- a/assets/styles/modules.css
+++ b/assets/styles/modules.css
@@ -19,3 +19,19 @@
     align-items: center;
     font-family: "Alice", serif;
 }
+
+.product button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: #000;
+    background-color: powderblue;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 1.5rem;
+}
+
+.product button:hover {
+    opacity: 0.7;
+}
