--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,8 +5,11 @@
   margin-top: 105px;
 }
 
-.hero-text {
+.hero-text > h1 {
   font-family: "Sacramento", cursive;
+}
+.hero-text > p {
+  font-family: "Alice", serif;
 }
 
 .navbar {
@@ -35,18 +38,7 @@
   font-family: "Alice", serif;
 }
 
-.product button {
-  border: none;
-  outline: 0;
-  padding: 12px;
-  color: #000;
-  background-color: powderblue;
-  text-align: center;
-  cursor: pointer;
+.product img {
   width: 100%;
-  font-size: 1.5rem;
-}
-
-.product button:hover {
-  opacity: 0.7;
+  height: 100%;
 }
