--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,8 +1,12 @@
-.carousel-inner {
+.carousel-slider {
   height: 130vh;
   position: relative;
   margin: auto;
   margin-top: 105px;
+}
+
+.footer-bar {
+  background-color: powderblue;
 }
 
 .hero-text > h1 {
@@ -12,16 +16,12 @@
   font-family: "Alice", serif;
 }
 
-.navbar {
+.header {
   background-color: powderblue;
   padding-left: 6%;
   padding-right: 6%;
   font-family: "Alice", serif;
-}
-
-.nav-item {
   font-size: 1.25rem;
-  font-family: "Alice", serif;
 }
 
 .prices {
@@ -36,9 +36,4 @@
   margin-top: 105px;
   text-align: center;
   font-family: "Alice", serif;
-}
-
-.product img {
-  width: 100%;
-  height: 100%;
 }
