--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,14 +6,8 @@
 }
 
 .footer-bar {
-  background-color: powderblue;
-}
-
-.hero-text > h1 {
-  font-family: "Sacramento", cursive;
-}
-.hero-text > p {
   font-family: "Alice", serif;
+  font-size: 1.25em;
 }
 
 .header {
@@ -24,16 +18,31 @@
   font-size: 1.25rem;
 }
 
-.prices {
-  color: grey;
+.product > p {
+  color: #000;
   font-size: 22px;
 }
 
 .product {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
   margin-top: 105px;
   text-align: center;
   font-family: "Alice", serif;
+}
+
+.product > img {
+  vertical-align: middle;
+  width: 100%;
+}
+
+.product-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-col {
+  flex: 25%;
+  padding: 10px;
+  max-width: 100%;
+  max-height: 100%;
 }
