--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -33,6 +33,7 @@
 .product > img {
   vertical-align: middle;
   width: 100%;
+  height: auto;
 }
 
 .product-row {
@@ -44,5 +45,4 @@
   flex: 25%;
   padding: 10px;
   max-width: 100%;
-  max-height: 100%;
 }
